--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Gamma-Sky</title>
-    </head>
-    <body>
-        <p>
-            An open source and open data webpage about the gamma-ray sky.
-        </p>
-        <p>
-            Coming soon!
-        </p>
-        <p>
-            If you're interested to contribute, watch this repo <a href="https://github.com/gammapy/gamma-sky">https://github.com/gammapy/gamma-sky</a>
-            or email <a href="https://github.com/cdeil">https://github.com/cdeil</a> .
-        </p>
-        
-    </body>
-</html>
+
+<link rel="stylesheet" href="http://aladin.u-strasbg.fr/AladinLite/api/v2/latest/aladin.min.css" />
+
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js" charset="utf-8"></script>
+
+<div id="aladin-lite-div"></div>
+
+<script type="text/javascript" src="http://aladin.u-strasbg.fr/AladinLite/api/v2/latest/aladin.min.js" charset="utf-8"></script>
+
+<style>
+
+#aladin-lite-div {
+  height: 90%;
+  width: 90%;
+}
+
+div { display: inline-block; }
+
+</style>
+
+<script src="script.js" charset="utf-8"></script>
