--- a/index.html
+++ b/index.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 
+
 <link rel="stylesheet" href="http://aladin.u-strasbg.fr/AladinLite/api/v2/latest/aladin.min.css" />
 
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js" charset="utf-8"></script>
 
 <div id="aladin-lite-div"></div>
 
-<script type="text/javascript" src="http://aladin.u-strasbg.fr/AladinLite/api/v2/latest/aladin.min.js" charset="utf-8"></script>
 
 <style>
 
 #aladin-lite-div {
-  height: 90%;
-  width: 90%;
+  height: 100%;
+  width: 100%;
+}
+
+html, body {
+  height: 100%;
+  width: 100%;
 }
 
 div { display: inline-block; }
 
 </style>
+
+<script type="text/javascript" src="http://aladin.u-strasbg.fr/AladinLite/api/v2/latest/aladin.js" charset="utf-8"></script>
 
 <script src="script.js" charset="utf-8"></script>
