--- a/index.html
+++ b/index.html
@@ -13,11 +13,17 @@
 #aladin-lite-div {
   height: 100%;
   width: 100%;
+
 }
 
 html, body {
   height: 100%;
   width: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: rgb(0, 0, 0);
+  overflow: hidden;
+
 }
 
 div { display: inline-block; }
@@ -25,5 +31,6 @@ div { display: inline-block; }
 </style>
 
 <script type="text/javascript" src="http://aladin.u-strasbg.fr/AladinLite/api/v2/latest/aladin.js" charset="utf-8"></script>
+<!-- TODO: make src .min.js -->
 
 <script src="script.js" charset="utf-8"></script>
