--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ html, body {
 
 </style>
 
-<script type="text/javascript" src="http://aladin.u-strasbg.fr/AladinLite/api/v2/latest/aladin.js" charset="utf-8"></script>
+<script type="text/javascript" src="https://aladin.u-strasbg.fr/AladinLite/api/v2/latest/aladin.js" charset="utf-8"></script>
 <!-- TODO: make src .min.js -->
 
 <script src="script.js" charset="utf-8"></script>
