--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 
 
-<link rel="stylesheet" href="https://aladin.u-strasbg.fr/AladinLite/api/v2/latest/aladin.min.css" />
+<!-- <link rel="stylesheet" href="http://aladin.u-strasbg.fr/AladinLite/api/v2/latest/aladin.min.css" />
 
-<script type="text/javascript" src="https://code.jquery.com/jquery-1.9.1.min.js" charset="utf-8"></script>
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js" charset="utf-8"></script> -->
+
+<link rel="stylesheet" href="static/aladin.css" />
+
+<script type="text/javascript" src="static/jquery-1.9.1.js"></script>
 
 <head>
 
@@ -81,7 +85,8 @@ html, body {
 
 </style>
 
-<script type="text/javascript" src="https://aladin.u-strasbg.fr/AladinLite/api/v2/latest/aladin.js" charset="utf-8"></script>
+<!-- <script type="text/javascript" src="http://aladin.u-strasbg.fr/AladinLite/api/v2/latest/aladin.js" charset="utf-8"></script> -->
 <!-- TODO: make src .min.js -->
+<script type="text/javascript" src="static/aladin.min.js"></script>
 
 <script src="script.js" charset="utf-8"></script>
