--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <head>
 
-  <title>Gamma-sky</title>
+  <title>Gamma-Sky</title>
 
 </head>
 
@@ -27,7 +27,7 @@
 
   <div id="aboutInfo">
 
-    <p>gamma-sky.net is an open-source and open-data webpage about the gamma-ray sky.</p>
+    <p>Gamma-Sky.net is an open-source and open-data webpage about the gamma-ray sky.</p>
 
     <p>More coming soon!</p>
 
@@ -120,11 +120,11 @@ table th {
           <td>{{name}}</td>
         </tr>
         <tr>
-          <th>ra</th>
+          <th>RA</th>
           <td>{{ra}}</td>
         </tr>
         <tr>
-          <th>dec</th>
+          <th>DEC</th>
           <td>{{dec}}</td>
         </tr>
       </tbody>
