--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <p>Created by <a href="https://github.com/cdeil" target="_blank">Christoph Deil</a> and
        <a href="https://github.com/vorugantia" target="_blank">Arjun Voruganti</a>.</p>
 
-    <p>If you wopd like to contribute, check out <a href="https://github.com/gammapy/gamma-sky" target="_blank">our repo</a>
+    <p>If you would like to contribute, check out <a href="https://github.com/gammapy/gamma-sky" target="_blank">our repo</a>
        or email us.</p>
 
   </div>
