--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,16 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>GammaSky</title>
+  <title>gamma-sky.net</title>
   <base href="/">
   {{content-for 'head'}}
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- TODO: Bundle files in our repo!? -->
+  <link rel="stylesheet" href="http://aladin.u-strasbg.fr/AladinLite/api/v2/latest/aladin.min.css" />
+  <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js" charset="utf-8"></script>
+  <script type="text/javascript" src="http://aladin.u-strasbg.fr/AladinLite/api/v2/latest/aladin.min.js" charset="utf-8"></script>
 
   <!-- Service worker support is disabled by default.
        Install the worker script and uncomment to enable.
