--- a/index.html
+++ b/index.html
@@ -117,11 +117,21 @@ table th {
 
   <div>
 
+    <h3 style="text-align: center">{{name}}</h3>
+
     <table>
       <tbody>
         <tr>
-          <th>Source_Name</th>
-          <td>{{name}}</td>
+          <td>RA:</td>
+          <th>{{ra}}</th>
+          <td>DEC:</td>
+          <th>{{dec}}</th>
+        </tr>
+        <tr>
+          <td>GLON:</td>
+          <th>{{glon}}</th>
+          <td>GLAT:</td>
+          <th>{{glat}}</th>
         </tr>
       </tbody>
     </table>
@@ -129,25 +139,8 @@ table th {
     <table>
       <tbody>
         <tr>
-          <th>ra</th>
-          <td>{{ra}}</td>
-          <th>dec</th>
-          <td>{{dec}}</td>
-        </tr>
-        <tr>
-          <th>GLON</th>
-          <td>{{glon}}</td>
-          <th>GLAT</th>
-          <td>{{glat}}</td>
-        </tr>
-      </tbody>
-    </table>
-
-    <table>
-      <tbody>
-        <tr>
-          <th>Assoc</th>
-          <td class="shift">{{assoc}}</td>
+          <td>Assoc:</td>
+          <th class="shift">{{assoc}}</th>
       </tbody>
     </table>
 
