--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 
 <body>
 
+  <div id="load_screen">
+    <div id="gamma-sky-loading">gamma-sky</div>
+    <div id="loading">Loading...</div>
+  </div>
+
   <!-- <div id="title"></div> -->
 
   <div id="aladin-lite-div"></div>
@@ -29,6 +34,8 @@
   <div id="aboutInfo">
 
     <p>gamma-sky.net is an open-source and open-data webpage about the gamma-ray sky.</p>
+
+    <p>Read our full documentation <a href="https://github.com/gammapy/gamma-sky/wiki" target="_blank">here</a>.</p>
 
     <p>More coming soon!</p>
 
@@ -40,8 +47,6 @@
 
   </div>
 
-</body>
-
 <style>
 
 /*#title {
@@ -49,6 +54,31 @@
   width: 100%;
   z-index: 5;
 }*/
+
+#load_screen {
+  background: black;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  /*position: fixed;*/
+}
+
+#gamma-sky-loading {
+  color: white;
+  text-align: center;
+  margin-top: 300px;
+  margin-left: auto;
+  font-size: 50px;
+}
+
+#loading {
+  color: white;
+  text-align: center;
+  /*height: 50%;
+  width: 50%;*/
+  margin-top: 10px;
+  font-size: 20px;
+}
 
 #aladin-lite-div {
   /*height: 95%;*/
@@ -61,7 +91,7 @@
 
 #aboutButton {
   color: black;
-  position: absolute;
+  /*position: absolute;*/
   border: none;
   background-color: white;
   opacity: 0.8;
@@ -74,7 +104,7 @@
 }
 
 #aboutInfo {
-  position: absolute;;
+  position: absolute;
   width: 410px;
   bottom: 38px;
   right: 100px;
@@ -104,20 +134,17 @@ table th {
   height: 30px;
 }
 
-.shift {
-  width: 200px;
-}
 
 </style>
 
-<script type="text/javascript" src="http://aladin.u-strasbg.fr/AladinLite/api/v2/latest/aladin.min.js" charset="utf-8"></script>
-<!-- <script type="text/javascript" src="static/aladin.min.js"></script> -->
+<script type="text/javascript" src="http://aladin.u-strasbg.fr/AladinLite/api/v2/latest/aladin.js" charset="utf-8"></script>
+<!-- <script type="text/javascript" src="static/aladin.js" charset="utf-8"></script> -->
 
-<script id="source-template" type="text/x-handlebars-template">
+<!-- <script id="source-template" type="text/x-handlebars-template">
 
   <div>
 
-    <h3 style="text-align: center">{{name}}</h3>
+    <h3 style="text-align:center">{{prefix}}{{name}}</h3>
 
     <table>
       <tbody>
@@ -140,12 +167,34 @@ table th {
       <tbody>
         <tr>
           <td>Assoc:</td>
-          <th class="shift">{{assoc}}</th>
+          <th style="width:200px">{{assoc}}</th>
+        </tr>
+      </tbody>
+    </table>
+
+    <table>
+      <tbody>
+        <tr>
+          <td>{{classLabel}}</td>
+          <th style="width:155px">{{class}}</th>
+        </tr>
+      </tbody>
+    </table>
+
+    <table>
+      <tbody>
+        <tr>
+          <td>{{radiusLabel}}</td>
+          <th class="shift">{{radius}}</th>
+        </tr>
       </tbody>
     </table>
 
   </div>
 
-</script>
+</script> -->
+
 
 <script src="script.js" charset="utf-8"></script>
+
+</body>
