--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,15 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
-  <title>GammaSky</title>
+  <title>gamma-sky.net</title>
   <base href="/">
+
+  <link rel="stylesheet" href="http://aladin.u-strasbg.fr/AladinLite/api/v2/latest/aladin.min.css" />
+  <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js" charset="utf-8"></script>
+  <script type="text/javascript" src="http://aladin.u-strasbg.fr/AladinLite/api/v2/latest/aladin.min.js" charset="utf-8"></script>
+
 
   {{#unless environment.production}}
   <script src="/ember-cli-live-reload.js" type="text/javascript"></script>
@@ -11,17 +17,83 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
+<!--
+<style>
+  html, body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    background-color: rgb(0, 0, 0);
+    overflow: hidden;
+  }
+</style> -->
+
+
 <body>
-  <app-root>Loading...</app-root>
-  
-    {{#each scripts.polyfills}}
-    <script src="{{.}}"></script>
-    {{/each}}
-    <script>
-      System.import('system-config.js').then(function () {
-        System.import('main');
-      }).catch(console.error.bind(console));
-    </script>
-  
+
+
+  <app-root>
+
+  <style>
+      #load_screen {
+          background-color: black;
+          bottom: 0px;
+          left: 0px;
+          position: fixed;
+          right: 0px;
+          top: 0px;
+          z-index: 99999;
+
+      }
+      #load_screen div.load_text {
+          color: white;
+          font-family: monospace;
+          left: 0px;
+          margin-top: -37px;
+          position: absolute;
+          right: 0px;
+          text-align: center;
+          top: 50%;
+      }
+      #load_screen h1 {
+          font-size: 50px;
+          line-height: 60px;
+          margin: 0px 0px 20px 0px;
+      }
+      #load_screen p {
+          font-size: 20px;
+          line-height: 14px;
+          margin: 0px 0px 0px 0px;
+      }
+  </style>
+
+  <div id="load_screen">
+      <div class="load_text">
+
+          <h1>
+              gamma-sky.net
+          </h1>
+
+          <p>
+              Loading...
+          </p>
+
+      </div>
+  </div>
+
+  </app-root>
+
+  {{#each scripts.polyfills}}
+  <script src="{{.}}"></script>
+  {{/each}}
+  <script>
+    System.import('system-config.js').then(function() {
+      System.import('main');
+    }).catch(console.error.bind(console));
+  </script>
+
 </body>
+
 </html>
