--- a/src/index.html
+++ b/src/index.html
@@ -18,17 +18,17 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
-<!--
+
 <style>
   html, body {
     height: 100%;
     width: 100%;
     margin: 0;
     padding: 0;
-    background-color: rgb(0, 0, 0);
-    overflow: hidden;
+    /*background-color: rgb(0, 0, 0);
+    overflow: hidden;*/
   }
-</style> -->
+</style>
 
 
 <body>
