--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,21 @@
 
 <!-- Import libraries -->
 
-<link rel="stylesheet" href="http://aladin.u-strasbg.fr/AladinLite/api/v2/latest/aladin.min.css" />
+<!-- We have a mixed content blocking issue, because GitHub Pages serves the webpage as "https". For now, we are loading styles locally (from static/) -->
+
+<!-- <link rel="stylesheet" href="http://aladin.u-strasbg.fr/AladinLite/api/v2/latest/aladin.min.css" /> -->
+<link rel="stylesheet" href="static/aladin.min.css" />
+
+
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.0.0.min.js" charset="utf-8"></script>
-<script type="text/javascript" src="http://aladin.u-strasbg.fr/AladinLite/api/v2/latest/aladin.min.js" charset="utf-8"></script>
+
+<!-- <script type="text/javascript" src="http://aladin.u-strasbg.fr/AladinLite/api/v2/latest/aladin.min.js" charset="utf-8"></script> -->
+<script type="text/javascript" src="static/aladin.min.js" charset="utf-8"></script>
 
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"></link>
-<link href='http://musicacolaborativa.moovenconsulting.com.br/mc/node_modules/ng2-select/components/css/ng2-select.css' rel="stylesheet"></link>
+
+<!-- <link href='http://musicacolaborativa.moovenconsulting.com.br/mc/node_modules/ng2-select/components/css/ng2-select.css' rel="stylesheet"></link> -->
+<link href='static/ng2-select.css' rel="stylesheet"></link>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
