--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,9 @@
 <script type="text/javascript" src="static/aladin.min.js" charset="utf-8"></script>
 
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"></link>
+<!--  TODO: Update to boostrap 4 and fix css styles all over the site:
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet">
+-->
 
 <!-- <link href='http://musicacolaborativa.moovenconsulting.com.br/mc/node_modules/ng2-select/components/css/ng2-select.css' rel="stylesheet"></link> -->
 <link href='static/ng2-select.css' rel="stylesheet"></link>
