--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
   <div id="load_screen">
       <div class="load_text">
 
-          <h1 class="app-root h1">
+          <h1 class="appworks">
               gamma-sky.net
           </h1>
 
